# corecpp_cmake_talk

./: LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
code/: CMakeLists.txt  build_examples_linux.sh  build_examples_windows.bat
code/01-basic-example/: CMakeLists.txt
code/02-basic-cmake-syntax/: CMakeLists.txt
code/02-find_package/: CMakeLists.txt  main.cpp
code/02-partition/: CMakeLists.txt  main.cpp
code/02-partition/bar_files/: bar.cmake  bar.cpp  bar.h
code/02-partition/foo_files/: foo.cpp  foo.h
code/02-partition/foobar_files/: CMakeLists.txt  foobar.cpp  foobar.h
code/03-cpp20-modules/: CMakeLists.txt  duck.ixx  main.cpp
code/03-fetch-content/: CMakeLists.txt  example.json  main.cpp
code/04-cpp20-modules/: duck.ixx  main.cpp
code/04-testing-with-cmake/: CMakeLists.txt
code/04-testing-with-cmake/01-no-framework-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
code/04-testing-with-cmake/01-no-framework-build/Testing/Temporary/: CTestCostData.txt
code/04-testing-with-cmake/01-no-framework-build/test/: CTestTestfile.cmake  cmake_install.cmake  unit_tests
code/04-testing-with-cmake/01-no-framework/src/: RemoteLogMessage.h  main.cpp
code/04-testing-with-cmake/01-no-framework/test/: CMakeLists.txt  RemoteLogMessageTest.cpp
code/04-testing-with-cmake/src/: CMakeLists.txt  main.cpp
code/04-testing-with-cmake/test/: RemoteLogMessageTest.cpp
